CCD-7329 Resolve the 7 high maintainability Sonar java:S1948 issues by marking the non-Java-serializable fields as transient while keeping their Jackson JSON contract explicit. Resolve warnings and deprecations